--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@
     /* shadow */
     --shadow-xl: 0 19px 38px rgba(15, 23, 42, 0.3), 0 15px 12px rgba(15, 23, 42, 0.2);
 
-    --clr-muted: #6b7c94;
+    --clr-muted: #7f8ea3;
     
     /* sizes */
     --size-xxs: 0.5rem;
